<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="64dp"
    android:isScrollContainer="true"
    tools:context=".ui.inspection.InspectionFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/hiveNameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPersonName"
            android:text="Hive Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/frameCountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Frame Count"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/frameCountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
        <TextView
            android:id="@+id/hiveSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Hive Size" />

        <Spinner
            android:id="@+id/hiveSizeInput"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginBottom="10dip"
            android:textSize="50sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/creationDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Creation Date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/creationDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>