<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.thehiveapp_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hive_diagram"
        android:name="com.example.thehiveapp_android.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_hive_list"
        android:name="com.example.thehiveapp_android.ui.hive.HiveListFragment"
        android:label="Hive List"
        tools:layout="@layout/hive_selection_list_view" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.thehiveapp_android.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_hive_form"
        android:name="com.example.thehiveapp_android.ui.dashboard.HiveFormFragment"
        android:label="HiveForm"
        tools:layout="@layout/hive_form_fragment" />
</navigation>