<resources>
    <!-- main title strings -->
    <string name="app_name">TheHiveApp_Android</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- basic -->
...
